[package]
name = "sim800-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
nom = "7.1"
serialport = "4.3"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.time]
version = "0.3"
features = ["formatting", "macros"]
